force-app/main/default/objects/Recognized_Visit_Device__c/Recognized_Visit_Device__c.object-meta.xml
<CustomObject>
    <label>Recognized Visit Device</label>
    <nameField>
        <label>Recognized Device Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recognized Visit Devices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>