force-app/main/default/objects/Recognized_Visit_Device__c/fields/Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Contact</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Recognized Visit Devices</relationshipLabel>
    <relationshipName>Recognized_Visit_Devices</relationshipName>
    <type>Lookup</type>
</CustomField>