force-app/main/default/objects/Recognized_Visit_Device__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Recognized Visit Devices</relationshipLabel>
    <relationshipName>Recognized_Visit_Devices</relationshipName>
    <type>Lookup</type>
</CustomField>