force-app/main/default/objects/Recognized_Visit_Device__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Lead__c</columns>
    <columns>Customer_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>